# buhera

./: .gitignore  Cargo.toml  Dockerfile  FIGURES_SUMMARY.md  README.md  README_SERVER_FARM.md  VALIDATION_RESULTS.md  arxiv_submission_plan.md  arxiv_submission_summary.md  clippy.toml  docker-compose.yml  rustfmt.toml  strategic_outreach_emails.md
.cargo/: config.toml
.claude/: settings.local.json
arxiv_submissions/: accelerated-virtual-processing.md  atmospheric-harvesting.md  awareness.md  buhera_vpos_arxiv.tex  computational-systems_arxiv.aux  computational-systems_arxiv.out  computational-systems_arxiv.tex  consious-systems_arxiv.aux  consious-systems_arxiv.out  consious-systems_arxiv.tex  gas-extended-molecular-memory.tex  gas-extended-supplementary-material.md  kwasa_kwasa_arxiv.tex  physical-systems_arxiv.aux  physical-systems_arxiv.out  physical-systems_arxiv.tex  physical-systems_arxiv.toc  physical.md  points.md  prepare_papers.py  self-aware-sytems.tex  sighthound_gps_algorithm.aux  sighthound_gps_algorithm.blg  sighthound_gps_algorithm.out  signal-database.md  stellas-constant.md  submission_guide.md  temporal-gps.md
boot/device-tree/: fuzzy-processors.dts  molecular-foundry.dts  neural-interfaces.dts  quantum-devices.dts
buhera-algorithms/: buhera-east.aux  buhera-east.out
buhera-os/: Cargo.toml  README.md
buhera-os/.cargo/: config.toml
buhera-os/.cargo-home/: .global-cache
buhera-os/.cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: memchr-2.8.2.crate  regex-1.12.4.crate  regex-syntax-0.8.11.crate
buhera-os/crates/buhera-embed/: Cargo.toml
buhera-os/crates/buhera-embed/src/: lexical.rs  lib.rs  overlap.rs  projection.rs  semantic.rs
buhera-os/crates/buhera-kernel/: Cargo.toml
buhera-os/crates/buhera-kernel/src/: cmm.rs  dic.rs  kernel.rs  lib.rs  pss.rs  pve.rs  tem.rs
buhera-os/crates/buhera-os/: Cargo.toml
buhera-os/crates/buhera-os/src/: lib.rs
buhera-os/crates/buhera-os/tests/: nist_accuracy.rs
buhera-os/crates/buhera-server/: Cargo.toml
buhera-os/crates/buhera-server/src/: main.rs
buhera-os/crates/buhera-substrate/: Cargo.toml
buhera-os/crates/buhera-substrate/src/: embed.rs  fisher.rs  lib.rs  scoord.rs  ternary.rs  trajectory.rs
buhera-os/crates/buhera-vahera/: Cargo.toml
buhera-os/crates/buhera-vahera/src/: ast.rs  interpreter.rs  lib.rs  parser.rs
buhera-os/data/: nist_compounds.json
buhera-os/examples/: demo.bvh  notes-wide.bvh  notes.bvh
category/categories/: propagation-of-categorical-completion.tex
category/gibbs-paradox/: categorical-resolution-gibbs-paradox.out
category/molecular-structure-prediction/: molecular-structure-prediction.tex
demos/: README.md  complete_alphabetical_validation.py  example_usage.py  example_usage_with_json.py  requirements.txt  run_validation.py  setup.py  test_alphabetical_encoding.py  test_compression_benefits.py  test_information_density.py
demos/buhera_framework_validation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
demos/buhera_validation/: __init__.py  cli.py  results_manager.py  visualization_manager.py
docs/: buhera-vpos.aux  buhera-vpos.fdb_latexmk  buhera-vpos.fls  buhera-vpos.out  buhera-vpos.tex  combine-harvester-integration.md  encryption.md  four-sided-triangle-ultimate-reasoning.md  heihachi-integration.md  honjo-masamune.md  index.md  interface.md  kwasa-kwasa-vpos-integration.md  purpose-zangalewa-integration.md  sighthound-integration.md  structure.md  usage.md  vingi-integration.md  visual.md  visualization.md  whitepaper-style.css
docs/architecture/: hegel-evidence-networks.md  pakati-integration.md  points.md  structure.md  tools.md  trebuchet-integration.md  zangalewa-vpos-integration.md
docs/foundation/: bio-oscillations.fdb_latexmk  bio-oscillations.fls  mass-spec.fdb_latexmk  mass-spec.fls  oscillatory-theorem.fdb_latexmk  oscillatory-theorem.fls  problem-reduction.aux  problem-reduction.fls  (+3 more)
long-grass/: implementation-plan.md  next.config.js  package-lock.json  package.json  sachikonye-sbs-0.1.0.tgz  tutorial.md
mechanistic-synthesis/implementation/: Cargo.toml  README.md
mechanistic-synthesis/implementation/crates/purpose-cli/: Cargo.toml
mechanistic-synthesis/implementation/crates/purpose-cli/src/: main.rs
mechanistic-synthesis/implementation/crates/purpose-core/: Cargo.toml
mechanistic-synthesis/implementation/crates/purpose-core/src/: domain.rs  error.rs  lib.rs  operation.rs  resolver.rs  typecheck.rs  types.rs  vahera.rs  value.rs
mechanistic-synthesis/implementation/crates/purpose-core/tests/: contract.rs
mechanistic-synthesis/implementation/crates/purpose-domains-protein/: Cargo.toml
mechanistic-synthesis/implementation/crates/purpose-domains-protein/src/: lib.rs
mechanistic-synthesis/implementation/crates/purpose-kernel/: Cargo.toml
mechanistic-synthesis/implementation/crates/purpose-kernel/src/: event.rs  kernel.rs  lib.rs  observable.rs  subsystem.rs
mechanistic-synthesis/implementation/crates/purpose-kernel/src/subsystem/: cmm.rs  dic.rs  pss.rs  pve.rs  tem.rs
mechanistic-synthesis/implementation/crates/purpose-kernel/tests/: kernel_parity.rs
mechanistic-synthesis/implementation/crates/purpose-operations/: Cargo.toml
mechanistic-synthesis/implementation/crates/purpose-operations/src/: executor.rs  lib.rs  provider.rs  registry.rs
mechanistic-synthesis/implementation/crates/purpose-operations/src/providers/: mod.rs  summary.rs  uniprot.rs
opt/: masunda-neural-toolkit.conf  masunda-quantum-sdk.conf  masunda-temporal-coordinator.conf
scripts/: purpose-reindex.ps1  purpose-reindex.sh  purpose_filter_index.py
self-aware-bayesian-belief-networks/: musande.md
src/: atomic_clock.rs  bmd.rs  borgia.rs  config.rs  entropy.rs  error.rs  foundry.rs  fuzzy.rs  gas_oscillation.rs  lib.rs  main.rs  masunda.rs  math.rs  molecular.rs  neural.rs  neural_transfer.rs  quantum.rs  s_framework.rs  semantic.rs  temporal.rs  utils.rs  virtual_foundry.rs  vpos.rs  zero_computation.rs
substrate/: package-lock.json
usage/: repl-use.md  webtool-use.md  webtool.md
(+699 files in other folders)
