[package]
name = "buhera"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Sachikonye"]
description = "Buhera Virtual Processor Architectures: A Theoretical Framework for Molecular-Scale Computational Substrates"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fullscreen-triangle/buhera"
keywords = ["quantum-computing", "molecular-computing", "fuzzy-logic", "bioinformatics", "virtual-processors"]
categories = ["science", "simulation", "algorithms"]

[lib]
name = "buhera"
path = "src/lib.rs"

[[bin]]
name = "buhera"
path = "src/main.rs"

[[bin]]
name = "server_farm"
path = "src/bin/server_farm.rs"

[dependencies]
# Minimal essential dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Basic mathematical computing
rand = "0.8"

# Basic data structures
hashbrown = "0.14"
indexmap = "2.0"

# Basic async
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
# None for now

[features]
default = ["server_farm", "consciousness", "s_framework", "temporal", "entropy"]
server_farm = ["gas_oscillation", "cooling", "virtual_foundry"]
consciousness = ["distributed_memory", "coherence_management"]
gas_oscillation = ["pressure_control", "molecular_analysis"]
cooling = ["entropy_prediction", "thermal_control"]
virtual_foundry = ["infinite_processors", "femtosecond_lifecycle"]
s_framework = ["s_distance", "tri_dimensional"]
temporal = ["precision_navigation", "atomic_clocks"]
entropy = ["atomic_processors", "predetermined_endpoints"]
distributed_memory = []
coherence_management = []
pressure_control = []
molecular_analysis = []
entropy_prediction = []
thermal_control = []
infinite_processors = []
femtosecond_lifecycle = []
s_distance = []
tri_dimensional = []
precision_navigation = []
atomic_clocks = []
atomic_processors = []
predetermined_endpoints = []

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

# Commented out workspace configuration for now
# [workspace]
# members = [
#     "crates/vpos-kernel",
#     "crates/molecular-substrate", 
#     "crates/fuzzy-state",
#     "crates/quantum-coherence",
#     "crates/neural-integration",
#     "crates/telepathic-comm",
#     "crates/bmd-catalyst",
#     "crates/semantic-processing",
#     "crates/molecular-foundry",
#     "examples/basic-demo",
#     "examples/bmd-processor",
#     "examples/fuzzy-computation",
#     "examples/quantum-coherence"
# ]

# [workspace.dependencies]
# # Shared dependencies across workspace
# buhera-core = { path = "crates/vpos-kernel" }
# buhera-molecular = { path = "crates/molecular-substrate" }
# buhera-fuzzy = { path = "crates/fuzzy-state" }
# buhera-quantum = { path = "crates/quantum-coherence" }
# buhera-neural = { path = "crates/neural-integration" }
# buhera-telepathic = { path = "crates/telepathic-comm" }
# buhera-bmd = { path = "crates/bmd-catalyst" }
# buhera-semantic = { path = "crates/semantic-processing" }
# buhera-foundry = { path = "crates/molecular-foundry" }
