# Buhera OS — standalone categorical operating system.
#
# This workspace is self-contained. It depends on nothing outside its
# own crates plus a small set of well-known third-party libraries
# (serde, regex, thiserror, clap). It is deliberately decoupled from
# `mechanistic-synthesis/`, `long-grass/`, and any other Buhera-adjacent
# project so the OS can be built and run on its own.

[workspace]
resolver = "2"
members = [
    "crates/buhera-substrate",
    "crates/buhera-kernel",
    "crates/buhera-vahera",
    "crates/buhera-os",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/fullscreen-triangle/buhera"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# Workspace-internal crates.
buhera-substrate = { path = "crates/buhera-substrate" }
buhera-kernel    = { path = "crates/buhera-kernel" }
buhera-vahera    = { path = "crates/buhera-vahera" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = false

[profile.dev]
opt-level = 0
debug = true
lto = false
incremental = true

[profile.test]
opt-level = 0
debug = true
lto = false
