[workspace]
resolver = "2"
members = [
    "crates/purpose-core",
    "crates/purpose-operations",
    "crates/purpose-domains-protein",
    "crates/purpose-kernel",
    "crates/purpose-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@bitspark.com>"]
license = "MIT"
repository = "https://github.com/fullscreen-triangle/buhera"
rust-version = "1.75"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

purpose-core = { path = "crates/purpose-core" }
purpose-operations = { path = "crates/purpose-operations" }
purpose-domains-protein = { path = "crates/purpose-domains-protein" }
purpose-kernel = { path = "crates/purpose-kernel" }

[profile.release]
lto = "thin"
codegen-units = 1
