[package]
name = "buhera-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Buhera kernel: the five subsystems (CMM/PSS/DIC/PVE/TEM) plus the Kernel orchestrator."

[dependencies]
buhera-substrate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
