[package]
name = "buhera-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/JSON server exposing a live Buhera kernel. Used by the long-grass webtool to give browser clients access to the OS."

[[bin]]
name = "buhera-server"
path = "src/main.rs"

[dependencies]
buhera-substrate = { workspace = true }
buhera-kernel    = { workspace = true }
buhera-vahera    = { workspace = true }
buhera-embed     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
clap        = { workspace = true }
thiserror   = { workspace = true }
axum        = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "macros", "query"] }
buhera-os   = { path = "../buhera-os" }
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
