[package]
name = "purpose-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Frozen type surface of the Purpose framework: VaHera AST, Value, Type, Operation, Domain, Resolver trait, typecheck."

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
