[package]
name = "purpose-domains-protein"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protein domain: resolver + operation vocabulary + UniProt-backed provider wiring."

[dependencies]
purpose-core = { workspace = true }
purpose-operations = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
